Checkpoint of mammal geometry plotting code

--- a/hw/6008_leg/mammal_geometry.ipynb
+++ b/hw/6008_leg/mammal_geometry.ipynb
@@ -2,33 +2,25 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "%matplotlib inline\n",
     "import matplotlib.pyplot as plt\n",
+    "import matplotlib.animation as animation\n",
     "import math\n",
-    "import sympy as sp"
+    "import numpy as np\n",
+    "import sympy as sp\n",
+    "from IPython.display import HTML\n",
+    "\n",
+    "plt.rcParams[\"animation.html\"] = \"jshtml\""
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "(acos((Px**2 + Py**2 + l1**2 - l2**2)/(2*l1*sqrt(Px**2 + Py**2))) + atan2(Py, Px) + pi/2,\n",
-       " -acos((-Px**2 - Py**2 + l1**2 + l2**2)/(2*l1*l2)) + acos((Px**2 + Py**2 + l1**2 - l2**2)/(2*l1*sqrt(Px**2 + Py**2))) + atan2(Py, Px) + pi/2)"
-      ]
-     },
-     "execution_count": 29,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Perform inverse kinematics for an in-plane mammal geometry leg.\n",
     "# This will be used as a component of the full 3dof IK solution.\n",
@@ -74,32 +66,25 @@
     "\n",
     "# Finally, convert these triangle angles into theta1 and theta2,\n",
     "# which are both measured relative to vertical.\n",
-    "theta1 = sp.atan2(Py, Px) + femur_angle + sp.pi / 2\n",
-    "theta2 = theta1 - tibia_angle\n",
-    "theta1, theta2\n"
+    "etheta1 = {theta1: sp.atan2(Py, Px) + femur_angle + sp.pi / 2}\n",
+    "ik = {\n",
+    "    'theta1': etheta1[theta1],\n",
+    "    'theta2': (theta1 - (sp.pi - tibia_angle)).subs(etheta1)\n",
+    "}\n",
+    "ik\n",
+    "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "{t1: Fx*l1*cos(theta1) - Fx*l2*cos(theta2) + Fy*l1*sin(theta1) + Fy*l2*sin(theta2),\n",
-       " t2: l2*(Fx*cos(theta2) - Fy*sin(theta2))}"
-      ]
-     },
-     "execution_count": 5,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Calculate the torque required from an in-plane mammal geometry leg\n",
-    "# to achieve a given end-effector force.  We assume that the 3rd degree\n",
-    "# of freedom is not a significant contributor to torque requirements.\n",
+    "# to achieve a given end-effector force.  We assume that the 3rd (lateral) \n",
+    "# degree of freedom is not a significant contributor to torque \n",
+    "# requirements.\n",
     "\n",
     "# Fx, Fy - force at end effector\n",
     "# t1, t2 - torque on the upper and lower leg\n",
@@ -109,8 +94,7 @@
     "#\n",
     "# Reference free body diagram at: \n",
     "# https://docs.google.com/drawings/d/19iMuQCkOq_pnOxSgBEZ9HpjowesbO7r2yoPeQHNCyjA/edit?usp=sharing\n",
-    "Fx, Fy, t1, t2, l1, l2, theta1, theta2 = \\\n",
-    "   sp.symbols('Fx Fy t1 t2 l1 l2 theta1 theta2')\n",
+    "Fx, Fy, t1, t2 = sp.symbols('Fx Fy t1 t2')\n",
     "    \n",
     "# We can trivially determine that F = I, so we'll just use F for I everywhere.\n",
     "    \n",
@@ -132,31 +116,88 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "-1.53141840691676"
-      ]
-     },
-     "execution_count": 30,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "sl1 = 0.113\n",
-    "sl2 = 0.119\n",
-    "sPx = 0\n",
-    "sPy = -0.20\n",
-    "theta2.subs([(l1, sl1), (l2, sl2), (Px, sPx), (Py, sPy)])\n",
+    "%%capture\n",
     "\n",
+    "sl1 = 0.113  # femur length\n",
+    "sl2 = 0.119  # tibia length\n",
+    "height_off_ground = 0.04\n",
+    "ypos = -sl1 - sl2 + height_off_ground\n",
     "\n",
-    "#r2 = {key: value.subs(theta1, math.radians(30)).subs(theta2, math.radians(15)).subs(l1, sl1).subs(l2, sl2).subs(Fx, 0)\n",
-    "#  for key, value in r.items()}\n",
-    "#r2\n"
+    "def rotate(theta):\n",
+    "    c, s = math.cos(theta), math.sin(theta)\n",
+    "    return np.array(((c, -s), (s, c)))\n",
+    "\n",
+    "def do_ik(x, y):\n",
+    "    sPx = x  \n",
+    "    sPy = y\n",
+    "\n",
+    "    exp = [(l1, sl1), (l2, sl2), (Px, sPx), (Py, sPy)]\n",
+    "    current = {key : sp.N(value.subs(exp)) for key, value in ik.items()}\n",
+    "\n",
+    "    # Now do the forward kinematics to find where the joint and end-effector \n",
+    "    # position are.\n",
+    "    \n",
+    "    stheta1, stheta2 = current['theta1'], current['theta2']\n",
+    "    \n",
+    "    p1 = rotate(stheta1).dot(np.array([[0], [-sl1]]))\n",
+    "    p2 = p1 + rotate(stheta2).dot(np.array([[0], [-sl2]]))\n",
+    "    \n",
+    "    return {\n",
+    "        'stheta1': stheta1,\n",
+    "        'stheta2': stheta2,\n",
+    "        'p1': p1,\n",
+    "        'p2': p2,\n",
+    "    }\n",
+    "    \n",
+    "fig, [ax1, ax2] = plt.subplots(nrows=1, ncols=2, sharex=True, figsize=(12, 4))\n",
+    "ax1.axis('equal')\n",
+    "ax1.set_xlim((-0.20, 0.2))\n",
+    "ax1.set_ylim((-0.30, 0.1))\n",
+    "\n",
+    "xspace = np.linspace(-0.095, 0.085, 200)\n",
+    "def find_torques(xpos):\n",
+    "    r = do_ik(xpos, ypos)\n",
+    "    exp = [(theta1, r['stheta1']),\n",
+    "           (theta2, r['stheta2']),\n",
+    "           (l1, sl1), (l2, sl2),\n",
+    "           (Fx, 0), (Fy, 1)]\n",
+    "    torques = {key : sp.N(value.subs(exp)) for key, value in torque_equations.items()}\n",
+    "    return torques[t1], torques[t2]\n",
+    "\n",
+    "torques = [find_torques(x) for x in xspace]\n",
+    "\n",
+    "# plot the torques\n",
+    "ax2.plot(xspace, [x[0] for x in torques], label='femur')\n",
+    "ax2.plot(xspace, [x[1] for x in torques], label='tibia')\n",
+    "ax2.plot(xspace, [abs(x[0]) + abs(x[1]) for x in torques], label='total')\n",
+    "xvline = ax2.axvline(x=0)\n",
+    "ax2.legend()\n",
+    "\n",
+    "# And finally plot the result.\n",
+    "leg_line, = ax1.plot([], [], 'ro-', lw=3, markersize=10)\n",
+    "\n",
+    "def animate(i):\n",
+    "    r = do_ik(xspace[i], ypos)\n",
+    "    p1 = r['p1']\n",
+    "    p2 = r['p2']\n",
+    "    leg_line.set_data([0, p1[0], p2[0]], [0, p1[1], p2[1]])\n",
+    "    xvline.set_data([xspace[i], xspace[i]], [0, 1])\n",
+    "    return (leg_line,)\n",
+    "\n",
+    "anim = animation.FuncAnimation(fig, animate, frames=len(xspace), interval=20)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "anim"
    ]
   }
  ],
