Checkpoint of mammal geometry calculations

--- a/hw/6008_leg/mammal_geometry.ipynb
+++ b/hw/6008_leg/mammal_geometry.ipynb
@@ -1,19 +1,15 @@
 {
  "cells": [
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "import matplotlib.pyplot as plt\n",
-    "import matplotlib.animation as animation\n",
-    "import math\n",
-    "import numpy as np\n",
-    "import sympy as sp\n",
-    "from IPython.display import HTML\n",
+    "# Mammal geometry leg inverse kinematics\n",
     "\n",
-    "plt.rcParams[\"animation.html\"] = \"jshtml\""
+    "Here we determine the inverse kinematics in position and force for\n",
+    "mammal geometry legs in 2D.  The 3D case is only slightly more \n",
+    "complicated as the lateral angle is solved independently, at which\n",
+    "the remaining position is determined using exactly this procedure."
    ]
   },
   {
@@ -22,9 +18,18 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Perform inverse kinematics for an in-plane mammal geometry leg.\n",
-    "# This will be used as a component of the full 3dof IK solution.\n",
-    "\n",
+    "import math\n",
+    "import numpy as np\n",
+    "import sympy as sp\n",
+    "sp.init_printing()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "# This is conducted purely in 2d.  The geometry looks like:\n",
     "#\n",
     "#     O               +y\n",
@@ -35,9 +40,7 @@
     "#\n",
     "#    ^tibia\n",
     "#\n",
-    "# Where O is the origin and P is the end effector point in the \n",
-    "# y/z coordinate frame.  +y is to the right in this diagram and\n",
-    "# +z is up.\n",
+    "# Where O is the origin and P is the end effector point.\n",
     "\n",
     "# Px, Py - position of end effector\n",
     "# l1, l2 - length of femur and tibia\n",
@@ -50,7 +53,7 @@
     "\n",
     "# Use the law of cosines to find the tibia angle first.  Note: A\n",
     "# practical implementation of this needs to handle the limited domain\n",
-    "# of the relevant actuators and dimensions.\n",
+    "# of the relevant actuators and other domain errors.\n",
     "norm_PO_sq = Px * Px + Py * Py\n",
     "norm_PO = sp.sqrt(norm_PO_sq)\n",
     "\n",
@@ -65,14 +68,13 @@
     "femur_angle = sp.acos(cos_femur_inv)\n",
     "\n",
     "# Finally, convert these triangle angles into theta1 and theta2,\n",
-    "# which are both measured relative to vertical.\n",
+    "# which are both measured relative to vertical, with positive being\n",
+    "# a counterclockwise rotation.\n",
     "etheta1 = {theta1: sp.atan2(Py, Px) + femur_angle + sp.pi / 2}\n",
     "ik = {\n",
     "    'theta1': etheta1[theta1],\n",
     "    'theta2': (theta1 - (sp.pi - tibia_angle)).subs(etheta1)\n",
-    "}\n",
-    "ik\n",
-    "\n"
+    "}"
    ]
   },
   {
@@ -81,19 +83,42 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Calculate the torque required from an in-plane mammal geometry leg\n",
-    "# to achieve a given end-effector force.  We assume that the 3rd (lateral) \n",
-    "# degree of freedom is not a significant contributor to torque \n",
-    "# requirements.\n",
+    "ik['theta1']  # theta1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "ik['theta2']  # theta2"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Torque\n",
     "\n",
+    "Now we will calculate the torque from an in-plane mammal geometry leg to \n",
+    "achieve a given end-effector force.  As before, this only solves in 2 dimensions\n",
+    "as this is a sub-component of the 3 dimensional solution.\n",
+    "\n",
+    "![Reference free body diagram](https://docs.google.com/drawings/d/e/2PACX-1vSUltzhAZBrtDqKxn8LvBXLhLOQatCL49l1j8gooBX2Ta413AleyVg1t0NhttvILkd1275p3pvYSvb6/pub?w=764&amp;h=723)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "# Fx, Fy - force at end effector\n",
     "# t1, t2 - torque on the upper and lower leg\n",
     "# l1, l2 - length of upper and lower leg\n",
     "# theta1 - angle from vertical of upper leg\n",
     "# theta2 - angle from vertical of lower leg\n",
-    "#\n",
-    "# Reference free body diagram at: \n",
-    "# https://docs.google.com/drawings/d/19iMuQCkOq_pnOxSgBEZ9HpjowesbO7r2yoPeQHNCyjA/edit?usp=sharing\n",
     "Fx, Fy, t1, t2 = sp.symbols('Fx Fy t1 t2')\n",
     "    \n",
     "# We can trivially determine that F = I, so we'll just use F for I everywhere.\n",
@@ -110,8 +135,7 @@
     "bottom_torque = sp.Eq(t2 - sp.cos(theta2) * l2 * Fx + sp.sin(theta2) * l2 * Fy, 0)\n",
     "\n",
     "# Now we have 2 equations and two unknowns.\n",
-    "torque_equations = sp.solve([top_torque, bottom_torque], [t1, t2])\n",
-    "torque_equations"
+    "torque_equations = sp.solve([top_torque, bottom_torque], [t1, t2])"
    ]
   },
   {
@@ -120,65 +144,123 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "%%capture\n",
+    "torque_equations"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Static torque required through a gait cycle\n",
     "\n",
-    "sl1 = 0.113  # femur length\n",
-    "sl2 = 0.119  # tibia length\n",
-    "height_off_ground = 0.04\n",
-    "ypos = -sl1 - sl2 + height_off_ground\n",
+    "Now, given a sample leg design (femur and tibia length), determine the torque\n",
+    "required of both actuators through a single forward walking gait cycle.  This\n",
+    "results in the end effector moving along a line at a constant y position."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%matplotlib inline\n",
+    "import matplotlib.pyplot as plt\n",
+    "import matplotlib.animation as animation\n",
     "\n",
+    "from IPython.display import HTML\n",
+    "\n",
+    "plt.rcParams[\"animation.html\"] = \"jshtml\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "def rotate(theta):\n",
     "    c, s = math.cos(theta), math.sin(theta)\n",
     "    return np.array(((c, -s), (s, c)))\n",
     "\n",
-    "def do_ik(x, y):\n",
-    "    sPx = x  \n",
-    "    sPy = y\n",
+    "class Gait:\n",
+    "    def __init__(self, height_off_ground, force=10, sl1=0.113, sl2=0.119):\n",
+    "        '''height_off_ground - gait offset from maximum extension (m)\n",
+    "        sl1 - femur length\n",
+    "        sl2 - tibia length'''\n",
+    "        self.height_off_ground = height_off_ground\n",
+    "        self.force = force\n",
+    "        self.sl1 = sl1\n",
+    "        self.sl2 = sl2\n",
     "\n",
-    "    exp = [(l1, sl1), (l2, sl2), (Px, sPx), (Py, sPy)]\n",
-    "    current = {key : sp.N(value.subs(exp)) for key, value in ik.items()}\n",
+    "        self.ypos = -sl1 - sl2 + self.height_off_ground\n",
+    "        self.xmax = 0.98 * math.sqrt((sl1 + sl2) ** 2 - self.ypos ** 2)\n",
+    "        \n",
+    "        # An optimal gait is one that runs from an x position of 0, until when \n",
+    "        # the tibia is directly vertical.  The total torque required outside of\n",
+    "        # that range increases drastically.  Compute that range here.\n",
+    "        self.optimal_xrange = np.array([0, math.sqrt(sl1**2 - (self.ypos + sl2)**2)])\n",
+    "        \n",
+    "    def do_ik(self, x, y):\n",
+    "        sPx = x  \n",
+    "        sPy = y\n",
     "\n",
-    "    # Now do the forward kinematics to find where the joint and end-effector \n",
-    "    # position are.\n",
-    "    \n",
-    "    stheta1, stheta2 = current['theta1'], current['theta2']\n",
-    "    \n",
-    "    p1 = rotate(stheta1).dot(np.array([[0], [-sl1]]))\n",
-    "    p2 = p1 + rotate(stheta2).dot(np.array([[0], [-sl2]]))\n",
-    "    \n",
-    "    return {\n",
-    "        'stheta1': stheta1,\n",
-    "        'stheta2': stheta2,\n",
-    "        'p1': p1,\n",
-    "        'p2': p2,\n",
-    "    }\n",
-    "    \n",
-    "fig, [ax1, ax2] = plt.subplots(nrows=1, ncols=2, sharex=True, figsize=(12, 4))\n",
+    "        exp = [(l1, self.sl1), (l2, self.sl2), (Px, sPx), (Py, sPy)]\n",
+    "        current = {key : sp.N(value.subs(exp)) for key, value in ik.items()}\n",
+    "\n",
+    "        # Now do the forward kinematics to find where the joint and end-effector \n",
+    "        # position are.\n",
+    "\n",
+    "        stheta1, stheta2 = current['theta1'], current['theta2']\n",
+    "\n",
+    "        p1 = rotate(stheta1).dot(np.array([[0], [-sl1]]))\n",
+    "        p2 = p1 + rotate(stheta2).dot(np.array([[0], [-sl2]]))\n",
+    "\n",
+    "        return {\n",
+    "            'stheta1': stheta1,\n",
+    "            'stheta2': stheta2,\n",
+    "            'p1': p1,\n",
+    "            'p2': p2,\n",
+    "        }\n",
+    "\n",
+    "    def find_torques(self, xpos):\n",
+    "        r = self.do_ik(xpos, self.ypos)\n",
+    "        exp = [(theta1, r['stheta1']),\n",
+    "               (theta2, r['stheta2']),\n",
+    "               (l1, sl1), (l2, sl2),\n",
+    "               (Fx, 0), (Fy, self.force)]\n",
+    "        torques = {key : sp.N(value.subs(exp)) for key, value in torque_equations.items()}\n",
+    "        return torques[t1], torques[t2]\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Now generate our plots.\n",
+    "gait = Gait(0.02)\n",
+    "\n",
+    "fig, [ax1, ax2] = plt.subplots(nrows=1, ncols=2, sharex=True, figsize=(14, 6))\n",
     "ax1.axis('equal')\n",
     "ax1.set_xlim((-0.20, 0.2))\n",
     "ax1.set_ylim((-0.30, 0.1))\n",
     "\n",
-    "xspace = np.linspace(-0.095, 0.085, 200)\n",
-    "def find_torques(xpos):\n",
-    "    r = do_ik(xpos, ypos)\n",
-    "    exp = [(theta1, r['stheta1']),\n",
-    "           (theta2, r['stheta2']),\n",
-    "           (l1, sl1), (l2, sl2),\n",
-    "           (Fx, 0), (Fy, 1)]\n",
-    "    torques = {key : sp.N(value.subs(exp)) for key, value in torque_equations.items()}\n",
-    "    return torques[t1], torques[t2]\n",
+    "xspace = np.linspace(-gait.xmax, gait.xmax, 50)\n",
     "\n",
-    "torques = [find_torques(x) for x in xspace]\n",
+    "torques = [gait.find_torques(x) for x in xspace]\n",
     "\n",
-    "# plot the torques\n",
+    "# Plot the torques.\n",
     "ax2.plot(xspace, [x[0] for x in torques], label='femur')\n",
     "ax2.plot(xspace, [x[1] for x in torques], label='tibia')\n",
     "ax2.plot(xspace, [abs(x[0]) + abs(x[1]) for x in torques], label='total')\n",
     "xvline = ax2.axvline(x=0)\n",
     "ax2.legend()\n",
     "\n",
-    "# And finally plot the result.\n",
+    "# Plot the leg configuration.\n",
     "leg_line, = ax1.plot([], [], 'ro-', lw=3, markersize=10)\n",
+    "ax2.axvspan(gait.optimal_xrange[0], gait.optimal_xrange[1], color='gray', alpha=0.05)\n",
     "\n",
     "def animate(i):\n",
     "    r = do_ik(xspace[i], ypos)\n",
@@ -188,7 +270,18 @@
     "    xvline.set_data([xspace[i], xspace[i]], [0, 1])\n",
     "    return (leg_line,)\n",
     "\n",
-    "anim = animation.FuncAnimation(fig, animate, frames=len(xspace), interval=20)"
+    "_ = animate(0)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Power consumption\n",
+    "\n",
+    "Now, we will assume actuators which have a known current to torque ratio,\n",
+    "and a known resistance.  This will allow us to calculate the instantaneous\n",
+    "and average power required during a gait cycle."
    ]
   },
   {
@@ -197,6 +290,67 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Titan 6008 (0.0450 / 0.06)\n",
+    "# BE8108 (0.0875 / 0.10)\n",
+    "# 3508 gearbox (0.085 / 0.06)\n",
+    "\n",
+    "femur_torque_per_amp = 0.0875\n",
+    "femur_resistance = 0.1\n",
+    "tibia_torque_per_amp = 0.0450 * 1.8  # belt reduction\n",
+    "tibia_resistance = 0.06\n",
+    "\n",
+    "def calculate_power(femur_tibia_torque):\n",
+    "    femur_current_A = femur_tibia_torque[0] / femur_torque_per_amp\n",
+    "    femur_power = femur_current_A ** 2 * femur_resistance\n",
+    "    \n",
+    "    tibia_current_A = femur_tibia_torque[1] / tibia_torque_per_amp\n",
+    "    tibia_power = tibia_current_A ** 2 * tibia_resistance\n",
+    "    \n",
+    "    return femur_power, tibia_power\n",
+    "\n",
+    "def get_gait_parameters(height, force=10):\n",
+    "    total_length = 0.113 + 0.119\n",
+    "    ratio = 0.55\n",
+    "    gait = Gait(height, force=force, sl1=ratio * total_length, sl2=(1.0 - ratio)*total_length)\n",
+    "    xrange = np.linspace(gait.optimal_xrange[0], gait.optimal_xrange[1])\n",
+    "    torques = [gait.find_torques(x) for x in xrange]\n",
+    "\n",
+    "    powers = [calculate_power(v) for v in torques]\n",
+    "    avg_femur_power = sum([i[0] for i in powers]) / len(powers)\n",
+    "    avg_tibia_power = sum([i[1] for i in powers]) / len(powers)\n",
+    "    return avg_femur_power + avg_tibia_power, gait.optimal_xrange[1] - gait.optimal_xrange[0]\n",
+    "\n",
+    "# We will plot the average power required as a function of height, \n",
+    "# along with the maximum gait distance.\n",
+    "dspace = np.linspace(0.01, 0.10, 20)\n",
+    "fig, [ax1, ax2] = plt.subplots(nrows=1, ncols=2, figsize=(14, 6))\n",
+    "\n",
+    "def make_plot(ax, force, title):\n",
+    "    results = [get_gait_parameters(x, force=force) for x in dspace]\n",
+    "\n",
+    "    ax.set_title(title)\n",
+    "    ax.plot(dspace, [x[0] for x in results], 'r', label='power')\n",
+    "    ax.set_xlabel('height (m)')\n",
+    "    ax.set_ylabel('W')\n",
+    "    ax.set_ylim(0, 40)\n",
+    "    ax.legend(loc='upper left')\n",
+    "    tx = ax.twinx()\n",
+    "    tx.plot(dspace, [x[1] for x in results], 'g', label='stride')\n",
+    "    tx.set_ylabel('m')\n",
+    "    tx.legend(loc='upper right')\n",
+    "    tx.set_ylim(0, 0.2)\n",
+    "    \n",
+    "make_plot(ax1, 10, title='10N')\n",
+    "make_plot(ax2, 20, title='20N')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "anim = animation.FuncAnimation(fig, animate, frames=len(xspace), interval=60)\n",
     "anim"
    ]
   }
