--- a/hw/6008_leg/mammal_geometry.ipynb
+++ b/hw/6008_leg/mammal_geometry.ipynb
@@ -199,7 +199,7 @@
     "        # An optimal gait is one that runs from an x position of 0, until when \n",
     "        # the tibia is directly vertical.  The total torque required outside of\n",
     "        # that range increases drastically.  Compute that range here.\n",
-    "        self.optimal_xrange = np.array([0, math.sqrt(sl1**2 - (self.ypos + sl2)**2)])\n",
+    "        self.optimal_xrange = np.array([0, math.sqrt(self.sl1**2 - (self.ypos + self.sl2)**2)])\n",
     "        \n",
     "    def do_ik(self, x, y):\n",
     "        sPx = x  \n",
@@ -213,8 +213,8 @@
     "\n",
     "        stheta1, stheta2 = current['theta1'], current['theta2']\n",
     "\n",
-    "        p1 = rotate(stheta1).dot(np.array([[0], [-sl1]]))\n",
-    "        p2 = p1 + rotate(stheta2).dot(np.array([[0], [-sl2]]))\n",
+    "        p1 = rotate(stheta1).dot(np.array([[0], [-self.sl1]]))\n",
+    "        p2 = p1 + rotate(stheta2).dot(np.array([[0], [-self.sl2]]))\n",
     "\n",
     "        return {\n",
     "            'stheta1': stheta1,\n",
@@ -227,7 +227,7 @@
     "        r = self.do_ik(xpos, self.ypos)\n",
     "        exp = [(theta1, r['stheta1']),\n",
     "               (theta2, r['stheta2']),\n",
-    "               (l1, sl1), (l2, sl2),\n",
+    "               (l1, self.sl1), (l2, self.sl2),\n",
     "               (Fx, 0), (Fy, self.force)]\n",
     "        torques = {key : sp.N(value.subs(exp)) for key, value in torque_equations.items()}\n",
     "        return torques[t1], torques[t2]\n"
@@ -263,7 +263,7 @@
     "ax2.axvspan(gait.optimal_xrange[0], gait.optimal_xrange[1], color='gray', alpha=0.05)\n",
     "\n",
     "def animate(i):\n",
-    "    r = do_ik(xspace[i], ypos)\n",
+    "    r = gait.do_ik(xspace[i], gait.ypos)\n",
     "    p1 = r['p1']\n",
     "    p2 = r['p2']\n",
     "    leg_line.set_data([0, p1[0], p2[0]], [0, p1[1], p2[1]])\n",
@@ -271,6 +271,15 @@
     "    return (leg_line,)\n",
     "\n",
     "_ = animate(0)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# animation.FuncAnimation(fig, animate, frames=len(xspace), interval=60)"
    ]
   },
   {
@@ -308,50 +317,53 @@
     "    \n",
     "    return femur_power, tibia_power\n",
     "\n",
-    "def get_gait_parameters(height, force=10):\n",
-    "    total_length = 0.113 + 0.119\n",
-    "    ratio = 0.55\n",
-    "    gait = Gait(height, force=force, sl1=ratio * total_length, sl2=(1.0 - ratio)*total_length)\n",
+    "def get_gait_parameters(height, scale=1):\n",
+    "    total_length = .25 #  .232\n",
+    "    ratio = 0.60\n",
+    "    gait = Gait(height, force=10 * scale, sl1=ratio * total_length, sl2=(1.0 - ratio)*total_length)\n",
     "    xrange = np.linspace(gait.optimal_xrange[0], gait.optimal_xrange[1])\n",
     "    torques = [gait.find_torques(x) for x in xrange]\n",
     "\n",
     "    powers = [calculate_power(v) for v in torques]\n",
     "    avg_femur_power = sum([i[0] for i in powers]) / len(powers)\n",
     "    avg_tibia_power = sum([i[1] for i in powers]) / len(powers)\n",
-    "    return avg_femur_power + avg_tibia_power, gait.optimal_xrange[1] - gait.optimal_xrange[0]\n",
+    "    return (avg_femur_power + avg_tibia_power)/scale, gait.optimal_xrange[1] - gait.optimal_xrange[0]\n",
     "\n",
     "# We will plot the average power required as a function of height, \n",
     "# along with the maximum gait distance.\n",
-    "dspace = np.linspace(0.01, 0.10, 20)\n",
-    "fig, [ax1, ax2] = plt.subplots(nrows=1, ncols=2, figsize=(14, 6))\n",
+    "dspace = np.linspace(0.01, 0.10, 5)\n",
+    "fig, [ax, ax2] = plt.subplots(nrows=1, ncols=2, figsize=(14, 6))\n",
     "\n",
-    "def make_plot(ax, force, title):\n",
-    "    results = [get_gait_parameters(x, force=force) for x in dspace]\n",
+    "ax.set_xlabel('stride (m)')\n",
+    "ax.set_ylabel('power (W)')\n",
     "\n",
-    "    ax.set_title(title)\n",
-    "    ax.plot(dspace, [x[0] for x in results], 'r', label='power')\n",
-    "    ax.set_xlabel('height (m)')\n",
-    "    ax.set_ylabel('W')\n",
-    "    ax.set_ylim(0, 40)\n",
-    "    ax.legend(loc='upper left')\n",
-    "    tx = ax.twinx()\n",
-    "    tx.plot(dspace, [x[1] for x in results], 'g', label='stride')\n",
-    "    tx.set_ylabel('m')\n",
-    "    tx.legend(loc='upper right')\n",
-    "    tx.set_ylim(0, 0.2)\n",
-    "    \n",
-    "make_plot(ax1, 10, title='10N')\n",
-    "make_plot(ax2, 20, title='20N')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "anim = animation.FuncAnimation(fig, animate, frames=len(xspace), interval=60)\n",
-    "anim"
+    "def make_plot(scale):\n",
+    "    results = [get_gait_parameters(x, scale=scale) for x in dspace]\n",
+    "    strides = np.array([x[1] for x in results], dtype=np.float64)\n",
+    "    powers = np.array([x[0] for x in results], dtype=np.float64)\n",
+    "    line, = ax.plot(strides, powers, label='{:d}N'.format(10*scale))\n",
+    "    # Interpolate the power required for a stride of 0.1m and denote that on the plot.\n",
+    "    power_10cm = np.interp(0.1, strides, powers)\n",
+    "    ax.annotate('{:.2f}W'.format(power_10cm), xy=(0.1, power_10cm),\n",
+    "               textcoords='offset pixels', xytext=(30, 0),\n",
+    "               arrowprops=dict(arrowstyle=\"->\"))\n",
+    "    return results\n",
+    "\n",
+    "make_plot(1)\n",
+    "make_plot(2)\n",
+    "results = make_plot(3)\n",
+    "\n",
+    "ax.legend(loc='upper left')\n",
+    "ax.set_ylim(bottom=0)\n",
+    "ax.grid()\n",
+    "\n",
+    "# The height will be the same for everything, we we just use the most \n",
+    "# recent one.\n",
+    "ax2.plot([x[1] for x in results], dspace, 'g')\n",
+    "ax2.set_ylim(bottom=0)\n",
+    "ax2.set_xlabel('stride (m)')\n",
+    "ax2.set_ylabel('height (m)')\n",
+    "_ = ax2.grid()"
    ]
   }
  ],
