More updates to mammal IK notebook

--- a/hw/6008_leg/mammal_geometry.ipynb
+++ b/hw/6008_leg/mammal_geometry.ipynb
@@ -240,7 +240,7 @@
    "outputs": [],
    "source": [
     "# Now generate our plots.\n",
-    "gait = Gait(0.02)\n",
+    "gait = Gait(0.07, sl1=0.5*0.25, sl2=0.5*0.25, force=15)\n",
     "\n",
     "fig, [ax1, ax2] = plt.subplots(nrows=1, ncols=2, sharex=True, figsize=(14, 6))\n",
     "ax1.axis('equal')\n",
@@ -304,7 +304,7 @@
     "# 3508 gearbox (0.085 / 0.06)\n",
     "\n",
     "femur_torque_per_amp = 0.0875\n",
-    "femur_resistance = 0.1\n",
+    "femur_resistance = 0.10\n",
     "tibia_torque_per_amp = 0.0450 * 1.8  # belt reduction\n",
     "tibia_resistance = 0.06\n",
     "\n",
@@ -319,8 +319,8 @@
     "\n",
     "def get_gait_parameters(height, scale=1):\n",
     "    total_length = .25 #  .232\n",
-    "    ratio = 0.60\n",
-    "    gait = Gait(height, force=10 * scale, sl1=ratio * total_length, sl2=(1.0 - ratio)*total_length)\n",
+    "    ratio = 0.5\n",
+    "    gait = Gait(height, force=15 * scale, sl1=ratio * total_length, sl2=(1.0 - ratio)*total_length)\n",
     "    xrange = np.linspace(gait.optimal_xrange[0], gait.optimal_xrange[1])\n",
     "    torques = [gait.find_torques(x) for x in xrange]\n",
     "\n",
@@ -341,7 +341,7 @@
     "    results = [get_gait_parameters(x, scale=scale) for x in dspace]\n",
     "    strides = np.array([x[1] for x in results], dtype=np.float64)\n",
     "    powers = np.array([x[0] for x in results], dtype=np.float64)\n",
-    "    line, = ax.plot(strides, powers, label='{:d}N'.format(10*scale))\n",
+    "    line, = ax.plot(strides, powers, label='{:d}N'.format(15*scale))\n",
     "    # Interpolate the power required for a stride of 0.1m and denote that on the plot.\n",
     "    power_10cm = np.interp(0.1, strides, powers)\n",
     "    ax.annotate('{:.2f}W'.format(power_10cm), xy=(0.1, power_10cm),\n",
