--- a/TODO
+++ b/TODO
@@ -1,10 +1,7 @@
- * design chassis
-
  * design central control board
-
- * controller board initial zeroing doesn't work terribly well for the
-   1.8 gear ratio... need to make sure it always picks alias closest
-   to 0
+ * write C++ multiplex stream client
+ * write servo protocol server
+ * write servo protocol client
 
  * get new controller backplate that works with new mounting hole
    positions (may need more than one?)
@@ -18,20 +15,10 @@
    * needs to fault or do something sane if it goes up against the
      position limit
 
- * implement servo-pair link position control
-   * at a minimum support feed forward
+ * implement joint-based force and position control
+   * ring topology on link port
+   * position mode includes velocity and feed forward
    * possibly elliptical control gain alteration
-
- * central control board
-   * battery in
-   * 4 leg powers out
-   * 4 leg rs485 out
-   * power to computer
-   * rs485 to computer
-   * imu
-   * buck converter for stm32f4
-   * stm32f4 of some kind, w/ rs485 bridge
-   * leds
 
  * Automate calibration
    * Have script do initial "d pwm" command to align motor, run cal,
@@ -63,6 +50,16 @@ Code cleanup
  * Place orders for mech qtys
    * Do first medium volume controller board run, qty 20-40
    * Gearsets
+
+DONE 2019-02-17
+ * verified that initial position setting was wrapping as expected,
+   with the current tibia gear ratio, we get about +-0.272 range of
+   measurement
+ * started work on IMU junction board... major parts selected and
+   rough board layout complete
+
+DONE 2019-02-16
+ * Drafted design of chassis
 
 DONE 2019-02-15
  * Ordered next revision of al bracket
